# gestion-du-salle-de-sport-

./: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  centre.c  centre.h  coach.c  coach.h  coach.txt  config.h  config.status  configure  configure.in  cours.txt  entraineur.txt  entraineurs.txt  event.c  event.h  gestion_cours.h  gestion_gym.glade  gestion_gym.gladep.bak  gestion_membre.c  gestion_membre.h  gestion_membre.txt  gestioncours.c  inscriptionscentre.txt  interface.c  interface.c.bak  interface.h.bak  main.c  main_cours.c  main_event.c  makefile  participants.txt  prog  projet-c
autom4te.cache/: output.1  requests  traces.0  traces.1
gestiongym2/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  configure.in  gestion_gym.glade
gestiongym2/autom4te.cache/: output.0  requests  traces.0  traces.1
gestiongym2/po/: Makefile  Makefile.in
gestiongym2/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  evenements.txt  event.c  gestion-salle-de-sport  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c
gestiongym2/src/.deps/: callbacks.Po
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  centre.c  centre.h  centres.txt  coach.c  coach.h  coach.txt  cours_entraineur.txt  entraineurs_temp.txt  envoieemail.txt  event.c  event.h  gestion_cours.h  gestion_membre.c  gestion_membre.h  gestion_membre.txt  gestion_salle_de_sport  gestioncours.c  inscrient.txt  inscriptions.txt  interface.c  interface.c.bak  interface.h  logad.txt  logcoach.txt  logmembre.txt  main.c  main.c.save  participants.txt  preference.txt  rendezvous.txt  reserver_coach.txt
src/.deps/: callbacks.Po  centre.Po  coach.Po  event.Po  gestion_membre.Po  gestioncours.Po  main.Po
